parser.output
Terminals unused in grammar

   FIRSTOP
   LASTOP
   CHSIGN
   ERROR
   OP
   SIZEOF
   LASTTERM


State 0 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: precomList declList

    2 precomList: precomList PRECOMPILER
    3           | PRECOMPILER
    4           | %empty

    5 declList: declList decl
    6         | decl

    7 decl: varDecl
    8     | funDecl

    9 varDecl: typeSpec varDeclList ';'

   10 scopedVarDecl: STATIC typeSpec varDeclList ';'
   11              | typeSpec varDeclList ';'

   12 varDeclList: varDeclList ',' varDeclInit
   13            | varDeclInit

   14 varDeclInit: varDeclId
   15            | varDeclId ':' simpleExp

   16 varDeclId: ID
   17          | ID '[' NUMCONST ']'

   18 typeSpec: INT
   19         | BOOL
   20         | CHAR

   21 funDecl: typeSpec ID '(' parms ')' stmt
   22        | ID '(' parms ')' stmt

   23 parms: parmList
   24      | %empty

   25 parmList: parmList ';' parmTypeList
   26         | parmTypeList

   27 parmTypeList: typeSpec parmIdList

   28 parmIdList: parmIdList ',' parmId
   29           | parmId

   30 parmId: ID
   31       | ID '[' ']'

   32 stmt: matched
   33     | unmatched

   34 matched: IF simpleExp THEN matched ELSE matched
   35        | WHILE simpleExp DO matched
   36        | FOR ID '=' iterRange DO matched
   37        | expstmt
   38        | compoundstmt
   39        | returnstmt
   40        | breakstmt

   41 iterRange: simpleExp TO simpleExp
   42          | simpleExp TO simpleExp BY simpleExp

   43 unmatched: IF simpleExp THEN stmt
   44          | IF simpleExp THEN matched ELSE unmatched
   45          | WHILE simpleExp DO unmatched
   46          | FOR ID '=' iterRange DO unmatched

   47 expstmt: exp ';'
   48        | ';'

   49 compoundstmt: '{' localDecls stmtList '}'

   50 localDecls: localDecls scopedVarDecl
   51           | %empty

   52 stmtList: stmtList stmt
   53         | %empty

   54 returnstmt: RETURN ';'
   55           | RETURN exp ';'

   56 breakstmt: BREAK ';'

   57 exp: mutable assignop exp
   58    | mutable INC
   59    | mutable DEC
   60    | simpleExp
   61    | mutable assignop error

   62 assignop: '='
   63         | ADDASS
   64         | SUBASS
   65         | MULASS
   66         | DIVASS

   67 simpleExp: simpleExp OR andExp
   68          | andExp

   69 andExp: andExp AND unaryRelExp
   70       | unaryRelExp

   71 unaryRelExp: NOT unaryRelExp
   72            | relExp

   73 relExp: minmaxExp relop minmaxExp
   74       | minmaxExp

   75 relop: LEQ
   76      | '<'
   77      | '>'
   78      | GEQ
   79      | EQ
   80      | NEQ

   81 minmaxExp: minmaxExp minmaxop sumExp
   82          | sumExp

   83 minmaxop: MAX
   84         | MIN

   85 sumExp: sumExp sumop mulExp
   86       | mulExp

   87 sumop: '+'
   88      | '-'

   89 mulExp: mulExp mulop unaryExp
   90       | unaryExp

   91 mulop: '*'
   92      | '/'
   93      | '%'

   94 unaryExp: unaryop unaryExp
   95         | factor

   96 unaryop: '-'
   97        | '*'
   98        | '?'

   99 factor: immutable
  100       | mutable

  101 mutable: ID
  102        | ID '[' exp ']'

  103 immutable: '(' exp ')'
  104          | call
  105          | constant

  106 call: ID '(' args ')'

  107 args: argList
  108     | %empty

  109 argList: argList ',' exp
  110        | exp

  111 constant: NUMCONST
  112         | CHARCONST
  113         | STRINGCONST
  114         | BOOLCONST


Terminals, with rules where they appear

$end (0) 0
'%' (37) 93
'(' (40) 21 22 103 106
')' (41) 21 22 103 106
'*' (42) 91 97
'+' (43) 87
',' (44) 12 28 109
'-' (45) 88 96
'/' (47) 92
':' (58) 15
';' (59) 9 10 11 25 47 48 54 55 56
'<' (60) 76
'=' (61) 36 46 62
'>' (62) 77
'?' (63) 98
'[' (91) 17 31 102
']' (93) 17 31 102
'{' (123) 49
'}' (125) 49
error (256) 61
FIRSTOP (258)
LASTOP (259)
ADDASS (260) 63
AND (261) 69
BOOL (262) 19
BOOLCONST (263) 114
BREAK (264) 56
BY (265) 42
CHAR (266) 20
CHARCONST (267) 112
CHSIGN (268)
DEC (269) 59
DIVASS (270) 66
DO (271) 35 36 45 46
ELSE (272) 34 44
EQ (273) 79
ERROR (274)
FOR (275) 36 46
GEQ (276) 78
ID (277) 16 17 21 22 30 31 36 46 101 102 106
IF (278) 34 43 44
INC (279) 58
INT (280) 18
LEQ (281) 75
MAX (282) 83
MIN (283) 84
MULASS (284) 65
NEQ (285) 80
NOT (286) 71
NUMCONST (287) 17 111
OR (288) 67
OP (289)
PRECOMPILER (290) 2 3
RETURN (291) 54 55
SIZEOF (292)
STATIC (293) 10
STRINGCONST (294) 113
SUBASS (295) 64
THEN (296) 34 43 44
TO (297) 41 42
WHILE (298) 35 45
LASTTERM (299)


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
program (64)
    on left: 1, on right: 0
precomList (65)
    on left: 2 3 4, on right: 1 2
declList (66)
    on left: 5 6, on right: 1 5
decl (67)
    on left: 7 8, on right: 5 6
varDecl (68)
    on left: 9, on right: 7
scopedVarDecl (69)
    on left: 10 11, on right: 50
varDeclList (70)
    on left: 12 13, on right: 9 10 11 12
varDeclInit (71)
    on left: 14 15, on right: 12 13
varDeclId (72)
    on left: 16 17, on right: 14 15
typeSpec (73)
    on left: 18 19 20, on right: 9 10 11 21 27
funDecl (74)
    on left: 21 22, on right: 8
parms (75)
    on left: 23 24, on right: 21 22
parmList (76)
    on left: 25 26, on right: 23 25
parmTypeList (77)
    on left: 27, on right: 25 26
parmIdList (78)
    on left: 28 29, on right: 27 28
parmId (79)
    on left: 30 31, on right: 28 29
stmt (80)
    on left: 32 33, on right: 21 22 43 52
matched (81)
    on left: 34 35 36 37 38 39 40, on right: 32 34 35 36 44
iterRange (82)
    on left: 41 42, on right: 36 46
unmatched (83)
    on left: 43 44 45 46, on right: 33 44 45 46
expstmt (84)
    on left: 47 48, on right: 37
compoundstmt (85)
    on left: 49, on right: 38
localDecls (86)
    on left: 50 51, on right: 49 50
stmtList (87)
    on left: 52 53, on right: 49 52
returnstmt (88)
    on left: 54 55, on right: 39
breakstmt (89)
    on left: 56, on right: 40
exp (90)
    on left: 57 58 59 60 61, on right: 47 55 57 102 103 109 110
assignop (91)
    on left: 62 63 64 65 66, on right: 57 61
simpleExp (92)
    on left: 67 68, on right: 15 34 35 41 42 43 44 45 60 67
andExp (93)
    on left: 69 70, on right: 67 68 69
unaryRelExp (94)
    on left: 71 72, on right: 69 70 71
relExp (95)
    on left: 73 74, on right: 72
relop (96)
    on left: 75 76 77 78 79 80, on right: 73
minmaxExp (97)
    on left: 81 82, on right: 73 74 81
minmaxop (98)
    on left: 83 84, on right: 81
sumExp (99)
    on left: 85 86, on right: 81 82 85
sumop (100)
    on left: 87 88, on right: 85
mulExp (101)
    on left: 89 90, on right: 85 86 89
mulop (102)
    on left: 91 92 93, on right: 89
unaryExp (103)
    on left: 94 95, on right: 89 90 94
unaryop (104)
    on left: 96 97 98, on right: 94
factor (105)
    on left: 99 100, on right: 95
mutable (106)
    on left: 101 102, on right: 57 58 59 61 100
immutable (107)
    on left: 103 104 105, on right: 99
call (108)
    on left: 106, on right: 104
args (109)
    on left: 107 108, on right: 106
argList (110)
    on left: 109 110, on right: 107 109
constant (111)
    on left: 111 112 113 114, on right: 105


State 0

    0 $accept: . program $end

    PRECOMPILER  shift, and go to state 1

    PRECOMPILER  [reduce using rule 4 (precomList)]
    $default     reduce using rule 4 (precomList)

    program     go to state 2
    precomList  go to state 3


State 1

    3 precomList: PRECOMPILER .

    $default  reduce using rule 3 (precomList)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: precomList . declList
    2 precomList: precomList . PRECOMPILER

    BOOL         shift, and go to state 5
    CHAR         shift, and go to state 6
    ID           shift, and go to state 7
    INT          shift, and go to state 8
    PRECOMPILER  shift, and go to state 9

    declList  go to state 10
    decl      go to state 11
    varDecl   go to state 12
    typeSpec  go to state 13
    funDecl   go to state 14


State 4

    0 $accept: program $end .

    $default  accept


State 5

   19 typeSpec: BOOL .

    $default  reduce using rule 19 (typeSpec)


State 6

   20 typeSpec: CHAR .

    $default  reduce using rule 20 (typeSpec)


State 7

   22 funDecl: ID . '(' parms ')' stmt

    '('  shift, and go to state 15


State 8

   18 typeSpec: INT .

    $default  reduce using rule 18 (typeSpec)


State 9

    2 precomList: precomList PRECOMPILER .

    $default  reduce using rule 2 (precomList)


State 10

    1 program: precomList declList .
    5 declList: declList . decl

    BOOL  shift, and go to state 5
    CHAR  shift, and go to state 6
    ID    shift, and go to state 7
    INT   shift, and go to state 8

    $default  reduce using rule 1 (program)

    decl      go to state 16
    varDecl   go to state 12
    typeSpec  go to state 13
    funDecl   go to state 14


State 11

    6 declList: decl .

    $default  reduce using rule 6 (declList)


State 12

    7 decl: varDecl .

    $default  reduce using rule 7 (decl)


State 13

    9 varDecl: typeSpec . varDeclList ';'
   21 funDecl: typeSpec . ID '(' parms ')' stmt

    ID  shift, and go to state 17

    varDeclList  go to state 18
    varDeclInit  go to state 19
    varDeclId    go to state 20


State 14

    8 decl: funDecl .

    $default  reduce using rule 8 (decl)


State 15

   22 funDecl: ID '(' . parms ')' stmt

    BOOL  shift, and go to state 5
    CHAR  shift, and go to state 6
    INT   shift, and go to state 8

    $default  reduce using rule 24 (parms)

    typeSpec      go to state 21
    parms         go to state 22
    parmList      go to state 23
    parmTypeList  go to state 24


State 16

    5 declList: declList decl .

    $default  reduce using rule 5 (declList)


State 17

   16 varDeclId: ID .
   17          | ID . '[' NUMCONST ']'
   21 funDecl: typeSpec ID . '(' parms ')' stmt

    '['  shift, and go to state 25
    '('  shift, and go to state 26

    $default  reduce using rule 16 (varDeclId)


State 18

    9 varDecl: typeSpec varDeclList . ';'
   12 varDeclList: varDeclList . ',' varDeclInit

    ';'  shift, and go to state 27
    ','  shift, and go to state 28


State 19

   13 varDeclList: varDeclInit .

    $default  reduce using rule 13 (varDeclList)


State 20

   14 varDeclInit: varDeclId .
   15            | varDeclId . ':' simpleExp

    ':'  shift, and go to state 29

    $default  reduce using rule 14 (varDeclInit)


State 21

   27 parmTypeList: typeSpec . parmIdList

    ID  shift, and go to state 30

    parmIdList  go to state 31
    parmId      go to state 32


State 22

   22 funDecl: ID '(' parms . ')' stmt

    ')'  shift, and go to state 33


State 23

   23 parms: parmList .
   25 parmList: parmList . ';' parmTypeList

    ';'  shift, and go to state 34

    $default  reduce using rule 23 (parms)


State 24

   26 parmList: parmTypeList .

    $default  reduce using rule 26 (parmList)


State 25

   17 varDeclId: ID '[' . NUMCONST ']'

    NUMCONST  shift, and go to state 35


State 26

   21 funDecl: typeSpec ID '(' . parms ')' stmt

    BOOL  shift, and go to state 5
    CHAR  shift, and go to state 6
    INT   shift, and go to state 8

    $default  reduce using rule 24 (parms)

    typeSpec      go to state 21
    parms         go to state 36
    parmList      go to state 23
    parmTypeList  go to state 24


State 27

    9 varDecl: typeSpec varDeclList ';' .

    $default  reduce using rule 9 (varDecl)


State 28

   12 varDeclList: varDeclList ',' . varDeclInit

    ID  shift, and go to state 37

    varDeclInit  go to state 38
    varDeclId    go to state 20


State 29

   15 varDeclInit: varDeclId ':' . simpleExp

    '*'          shift, and go to state 39
    '-'          shift, and go to state 40
    '('          shift, and go to state 41
    '?'          shift, and go to state 42
    BOOLCONST    shift, and go to state 43
    CHARCONST    shift, and go to state 44
    ID           shift, and go to state 45
    NOT          shift, and go to state 46
    NUMCONST     shift, and go to state 47
    STRINGCONST  shift, and go to state 48

    simpleExp    go to state 49
    andExp       go to state 50
    unaryRelExp  go to state 51
    relExp       go to state 52
    minmaxExp    go to state 53
    sumExp       go to state 54
    mulExp       go to state 55
    unaryExp     go to state 56
    unaryop      go to state 57
    factor       go to state 58
    mutable      go to state 59
    immutable    go to state 60
    call         go to state 61
    constant     go to state 62


State 30

   30 parmId: ID .
   31       | ID . '[' ']'

    '['  shift, and go to state 63

    $default  reduce using rule 30 (parmId)


State 31

   27 parmTypeList: typeSpec parmIdList .
   28 parmIdList: parmIdList . ',' parmId

    ','  shift, and go to state 64

    $default  reduce using rule 27 (parmTypeList)


State 32

   29 parmIdList: parmId .

    $default  reduce using rule 29 (parmIdList)


State 33

   22 funDecl: ID '(' parms ')' . stmt

    '{'          shift, and go to state 65
    '*'          shift, and go to state 39
    '-'          shift, and go to state 40
    ';'          shift, and go to state 66
    '('          shift, and go to state 41
    '?'          shift, and go to state 42
    BOOLCONST    shift, and go to state 43
    BREAK        shift, and go to state 67
    CHARCONST    shift, and go to state 44
    FOR          shift, and go to state 68
    ID           shift, and go to state 45
    IF           shift, and go to state 69
    NOT          shift, and go to state 46
    NUMCONST     shift, and go to state 47
    RETURN       shift, and go to state 70
    STRINGCONST  shift, and go to state 48
    WHILE        shift, and go to state 71
